--- a/files/style.css
+++ b/files/style.css
@@ -7,7 +7,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{di
 nav ul,ul{list-style:none}
 blockquote,q{quotes:none}
 blockquote:before,blockquote:after,q:before,q:after{content:none}
-a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent;text-decoration-line:none;}
+a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent;text-decoration-line: none; color:#1d00bb;}
 ins{background-color:#ff9;color:#000;text-decoration:none}
 mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}
 del{text-decoration:line-through}
@@ -111,7 +111,7 @@ img {
     text-align: center;
 }
 .img-main > img {
-    max-width: 50%;
+    max-width: 80%;
     height: auto;
     border-radius: 50% !important;
     margin: 30px;
@@ -119,27 +119,27 @@ img {
 
 /* Slide */
 .swiper-container {
-    background-color:#525a63;
 }
 .swiper-slide {
-    padding:0 15px 15px;
-    background: #5a606a; /* Old browsers */
-    background: -moz-linear-gradient(left,  #5a606a 0%, #7b8189 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#5a606a), color-stop(100%,#7b8189)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(left,  #5a606a 0%,#7b8189 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(left,  #5a606a 0%,#7b8189 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(left,  #5a606a 0%,#7b8189 100%); /* IE10+ */
-    background: linear-gradient(to right,  #bfd4da 0%,#bfd4da 100%); /* W3C */
+    padding:15px 15px 15px;
 }
 .swiper-slide img {
     max-width:100%;
     border:5px solid rgba(255, 255, 255, .75);
+    border-radius: 20%;
+    height: auto;
 }
 .swiper-pagination-bullet-active {
     background:#3fb4b6;
 }
 .swiper-container-horizontal>.swiper-pagination {
     bottom:30px;
+}
+.swiper-button-prev, .swiper-button-next {
+    background-color: #082667;
+    padding: 50px 30px;
+    border-radius: 12%;
+    opacity: 60%;
 }
 .swiper-pagination-bullet {
     width:10px;
@@ -165,6 +165,41 @@ img {
     -webkit-background-size:292px auto;
     background-size:292px auto;
     text-indent:-9999px;
+}
+.center-wrapper {
+	display: grid;
+	align-items: center;
+	justify-content: center;
+	-height: 100vh; /* Adjusted to center vertically */
+	padding: 25px 0 0 0;
+    -webkit-background-size: 15px auto;
+    background-size: 15px auto;
+}
+.circle-container {
+	margin: auto;
+	width: 100%;
+	height: 100px;
+	display: flex;
+	flex-direction: column; /* Arrange content in a column */
+	align-items: center;
+	justify-content: center;
+	font-size: 3em;
+	font-weight: bold;
+}
+.circle-container-contents {
+	display: flow;
+	align-items: center;
+	justify-content: center;
+	font-weight: bold;
+}
+.additional-content {
+  margin-top: 20px; /* Adjust the margin as needed */
+  text-align: center;
+  font-size: 1.2em;
+  line-height: 1.6em;
+}
+.additional-content p {
+  margin-top: 6px; /* Adjust the margin as needed */
 }
 
 /* 오시는길 */
@@ -210,19 +245,33 @@ img {
     text-indent:0;
 }
 
-/* 신랑 신부 소개 */
+/* 아빠 엄마 소개 */
+.thumb img {
+	width: 100px;
+}
 .couple-intro {
-    padding:10px 0 20px;
-    background:url(../files/line-pattern.png) repeat-x 50% 0;
     background-size:20px auto;
 }
 .couple-intro .inner {
-    width:300px;
+    width: 80%;
     margin:0 auto;
 }
-.couple-intro .thumb {
+.couple-intro .couple-intro .thumb {
     display:block;
     margin-top:20px;
+}
+.couple-intro .profile-container {
+	display: flex;
+	width: 100%;
+	margin-top: 20px;
+}
+.couple-intro .profile-container .profile-left {
+	flex: 1;
+    text-align: center;
+}
+.couple-intro .profile-container .profile-right {
+	flex: 2;
+	font-size: 1.2em;
 }
 .kakao-link {
     display:block;
@@ -231,7 +280,22 @@ img {
 }
 
 .mt10 {
-	margin-top: 10px;
+	margin-top: 10px !important;
+}
+.mt20 {
+	margin-top: 20px !important;
+}
+.mt30 {
+	margin-top: 30px !important;
+}
+.mt60 {
+	margin-top: 60px !important;
+}
+.pt10 {
+	padding-top: 10px !important;
+}
+.pt20 {
+	padding-top: 20px !important;
 }
 .pt30 {
 	padding-top: 30px !important;
