--- a/files/style.css
+++ b/files/style.css
@@ -140,6 +140,7 @@ img {
     padding: 50px 30px;
     border-radius: 12%;
     opacity: 60%;
+    top: 76%;
 }
 .swiper-pagination-bullet {
     width:10px;
