--- a/css/jejuhallasan.css
+++ b/css/jejuhallasan.css
@@ -5,9 +5,9 @@
   font-family: 'Jeju Hallasan';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/JejuHallasan-Regular.eot);
-  src: url(../fonts/JejuHallasan-Regular.eot?#iefix) format('embedded-opentype'),
-       url(../fonts/JejuHallasan-Regular.woff2) format('woff2'),
-       url(../fonts/JejuHallasan-Regular.woff) format('woff'),
-       url(../fonts/JejuHallasan-Regular.ttf) format('truetype');
+  src: url(//fonts.gstatic.com/ea/jejuhallasan/v3/JejuHallasan-Regular.eot);
+  src: url(//fonts.gstatic.com/ea/jejuhallasan/v3/JejuHallasan-Regular.eot?#iefix) format('embedded-opentype'),
+       url(//fonts.gstatic.com/ea/jejuhallasan/v3/JejuHallasan-Regular.woff2) format('woff2'),
+       url(//fonts.gstatic.com/ea/jejuhallasan/v3/JejuHallasan-Regular.woff) format('woff'),
+       url(//fonts.gstatic.com/ea/jejuhallasan/v3/JejuHallasan-Regular.ttf) format('truetype');
 }
